src/objects/dwp_frct__management_plan__c.object
<CustomObject>
    <description>Object to manage plans</description>
    <fields>
        <fullName>dwp_frct__management_plan_end_date__c</fullName>
        <description>End Date plan</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dwp_frct__management_plan_stage_type__c</fullName>
        <description>Stages of the plan.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_frct__management_plan_start_date__c</fullName>
        <description>Start Date plan</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dwp_frct__mngmt_plan_achievement_per__c</fullName>
        <description>Calculate in percentage of total closed divided by total commitment.</description>
        <formula>dwp_frct__mngmt_plan_total_regisn_amount__c / dwp_frct__mngmt_plan_tot_commitment_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>dwp_frct__mngmt_plan_tot_commitment_amount__c</fullName>
        <description>Rollup summary</description>
        <label>Total Commitment</label>
        <summarizedField>dwp_frct__grouping__c.dwp_frct__original_commitment_amount__c</summarizedField>
        <summaryForeignKey>dwp_frct__grouping__c.dwp_frct__management_plan_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dwp_frct__mngmt_plan_total_regisn_amount__c</fullName>
        <description>Sum of oppportunities amount formalized within the period of each family</description>
        <label>Total Closed</label>
        <summarizedField>dwp_frct__grouping__c.dwp_frct__opportunity_closed_amount__c</summarizedField>
        <summaryForeignKey>dwp_frct__grouping__c.dwp_frct__management_plan_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dwp_frct__other_information_desc__c</fullName>
        <description>Comments of the plan</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dwp_frct__user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The responsible person for the manager.</description>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Management_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>id_unique__c</fullName>
        <description>Internal code</description>
        <externalId>true</externalId>
        <label>Unique identifier plan</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>other_information_b_desc__c</fullName>
        <label>Comments2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>other_information_c_desc__c</fullName>
        <label>Comments3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Management Plan</label>
    <listViews>
        <fullName>dwp_frct__All</fullName>
        <columns>NAME</columns>
        <columns>dwp_frct__mngmt_plan_tot_commitment_amount__c</columns>
        <columns>dwp_frct__mngmt_plan_total_regisn_amount__c</columns>
        <columns>dwp_frct__mngmt_plan_achievement_per__c</columns>
        <columns>dwp_frct__management_plan_stage_type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Management Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Owner_stage_rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
OR(
	AND
	(
	  
		OR(
		ISPICKVAL( dwp_frct__management_plan_stage_type__c , &apos;04&apos;),ISPICKVAL( dwp_frct__management_plan_stage_type__c , &apos;05&apos;)
		)
		,
		(OwnerId = $User.Id),
		($Profile.Name &lt;&gt; &apos;System Administrator&apos;),
		(dwp_frct__user_id__r.prof_position_type__c &lt;&gt;&apos;CA1&apos;)
	  
	),
	ISPICKVAL( dwp_frct__management_plan_stage_type__c , &apos;05&apos;)
)
,true,false)</errorConditionFormula>
        <errorMessage>You can not change to the selected stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_frct__Do_not_back_in_sales_path</fullName>
        <active>true</active>
        <description>Validation rule to avoid previous states in sales path stage.</description>
        <errorConditionFormula>CASE(dwp_frct__management_plan_stage_type__c,
&quot;01&quot;,1,
&quot;02&quot;,2,
&quot;03&quot;,3,
&quot;04&quot;,4,
&quot;05&quot;,5,
0)
-
CASE(PRIORVALUE(dwp_frct__management_plan_stage_type__c),
&quot;01&quot;,1,
&quot;02&quot;,2,
&quot;03&quot;,3,
&quot;04&quot;,4,
&quot;05&quot;,5,
0) &lt; 0</errorConditionFormula>
        <errorMessage>Impossible to go back on sales path.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_frct__Owner_can_not_access_in_progress_stage</fullName>
        <active>true</active>
        <description>You can not access to &apos;In progress&apos; stage.</description>
        <errorConditionFormula>IF(AND((ISPICKVAL( dwp_frct__management_plan_stage_type__c , &apos;04&apos;)),(OwnerId  =  $User.Id),($Profile.Name &lt;&gt; &apos;System Administrator&apos;)),true,false)</errorConditionFormula>
        <errorDisplayField>dwp_frct__other_information_desc__c</errorDisplayField>
        <errorMessage>You can not access to &apos;In progress&apos; stage.</errorMessage>
    </validationRules>
</CustomObject>